fix: fix problem with shift

--- a/virtual-keyboard/stylesheets/abstracts/_variables.scss
+++ b/virtual-keyboard/stylesheets/abstracts/_variables.scss
@@ -1,4 +1,3 @@
-$background-keyboard: rgb(199, 180, 180);
-$background-keyboard-key: rgb(75, 71, 71);
+$background-keyboard: #004134;
+$background-keyboard-key: rgba(255, 255, 255, 0.2);
 $background-keyboard-key-hover: rgb(121, 62, 176);
-
