--- a/virtual-keyboard/stylesheets/base/_base.scss
+++ b/virtual-keyboard/stylesheets/base/_base.scss
@@ -1,5 +1,7 @@
 body {
     margin: 0 auto;
+    background-color: #25665a;
 
+    color: #FFF;
     font-family: "Trebuchet MS", "Helvetica", sans-serif;
 }
